// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addNewPost Saga should dispatch the addNewPostError action if it requests throws an error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "app/Editor/ADDING_NEW_POST",
    },
    "channel": null,
  },
}
`;

exports[`addNewPost Saga should dispatch the addNewPostError action if it requests throws an error 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "foo": "bar",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`addNewPost Saga should dispatch the addNewPostError action if it requests throws an error 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "article": Object {
        "foo": "bar",
      },
      "type": "app/Editor/ADD_NEW_POST_COMPLETED",
    },
    "channel": null,
  },
}
`;

exports[`fetchArticle Saga should dispatch the fetchArticleError action if it requests throws an error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "app/Editor/FETCHING_ARTICLE",
    },
    "channel": null,
  },
}
`;

exports[`fetchArticle Saga should dispatch the fetchArticleError action if it requests throws an error 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      undefined,
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`fetchArticle Saga should dispatch the fetchArticleError action if it requests throws an error 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "article": Object {
        "foo": "bar",
      },
      "type": "app/Editor/FETCH_ARTICLE_COMPLETED",
    },
    "channel": null,
  },
}
`;

exports[`updateArticle Saga should dispatch the updateArticleError action if it requests throws an error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "app/Editor/UPDATING_ARTICLE",
    },
    "channel": null,
  },
}
`;

exports[`updateArticle Saga should dispatch the updateArticleError action if it requests throws an error 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "sample-slug",
      Object {
        "foo": "bar",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`updateArticle Saga should dispatch the updateArticleError action if it requests throws an error 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "article": Object {
        "foo": "bar",
      },
      "type": "app/Editor/UPDATE_ARTICLE_COMPLETED",
    },
    "channel": null,
  },
}
`;
